src/css/main.css
/*
+---------------+
| :: M A I N :: | 
+---------------+
*/

:root {
    --bg-primary: #2E3440;
    --bg-secondary: #282C34;
    --font-primary: #ABB2BF;
}

@font-face { 	/* second font */
	font-family: "Iosevka";
	src 		: url(../fonts/iosevka-regular.ttf);
	font-display: swap;
}

* {
    font-family: Iosevka;
    color: var(--font-primary);
}

body, html {
    margin: 0;
    padding: 0;
    line-height: 1.5em;
    height: 100%;
    width: 100%;
	overflow: hidden;
}

.bg {
    width: 100%;
    height: 100%;
    display: flex;
    background-image: url(../img/alto.png);
    background-repeat: no-repeat;
    background-size: auto 100vh;
    background-position: 50% 50%;
    background-color: var(--bg-primary);
    /*overflow: hidden;*/
}

/*----------------------------------------------*/


/*
+--------------------------+
| :: L E F T  L I S T S :: | 
+--------------------------+
*/

#list {
    height: 100%;
    width: 35%;
    background-color: rgba(52,52,52,0.3);
    backdrop-filter: blur(1rem);
	z-index: 10;
}

#list, #icons {
    padding: 2rem 2.5rem 2rem 2.5rem;
    box-sizing: border-box;
    display: grid;
}


.olist { /* outer */
    display: flex;
    align-items: center;
    gap: 2rem;
    justify-content: flex-end;
    flex-direction: row;
    filter: grayscale(.2);
    transition: filter 0.1s ease-in-out, margin 0.2s ease-in-out 0.05s;
    cursor: pointer;
	z-index: 11;
}

.olist_active {
    margin: 2rem 0 2rem 0 !important; 
    filter: grayscale(0);
}


.ilist_title, .ilist_icon { /* inner */
    display: flex;
    justify-content: center;
    flex-direction: column;
    cursor: pointer;
	z-index: 11;
}

.ilist_title {
    align-items: end;
    gap: 0.5rem;
}

.ilist_icon {
    align-items: center;
    gap: 1.25rem;
	z-index: 11;
}


.title, .description {
    transition: color 0.2s ease-in-out 0.05s, font-size 0.2s cubic-bezier(0.95,-0.6, 0.45, 2) 0.05s;
	z-index: 11;
}


.title {
    font-size: 1.75rem;
}

.title_active {
    font-size: 2rem;
}


.description {
    font-size: 0.9rem;
    font-style: italic;
}

.description_active {
    font-size: 0.95rem
}


.title_icon {
    transform: scale(0);
    transition: transform 0.3s cubic-bezier(0.95,-0.6, 0.45, 2) 0.05s, color 0.2s ease-in-out 0.1s;
	z-index: 11;
}

.title_icon_active { /* indirect */
    transform: scale(1.4);
}

.large_title_icon { /* direct */
    transform: scale(1.6) !important;
}

/*----------------------------------------------*/


/*
+----------------------------------------------+
| :: R I G H T  L I S T S  A N D  I C O N S :: | 
+----------------------------------------------+
*/

#icons {
    height: 100%;
    width: 65%;
    background-color: rgba(192,192,192,0.1);
	z-index: 7;
}


.icon_list, .olist {
    margin: 1rem 0 1rem 0;
}

.icon_list {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 3rem;
    transition: margin 0.2s ease-in-out 0.05s;
	z-index: 8;
}

.icons_active { /* hover icon list */
    margin: 2rem 0 2rem 0;
}


.icon {
    transform: scale(0);
	z-index: 100001;
}

.icon_active_b { /* indirect list */
    transform: scale(1.7);
}

.icon_active_s { /* direct list */
    transform: scale(1.5);
}

.large_icon { /* direct icon */
    transform: scale(1.8) !important;
}

/*----------------------------------------------*/


/*
+----------------------------------------+
| :: D O T S  O N  I C O N  H O V E R :: |
+----------------------------------------+
*/

.udot, .ldot { /* lower, upper */
    width: 0rem;
    height: 0rem;
    border-radius: 1rem;
    transition: width 0.4s cubic-bezier(0.95,-0.6, 0.45, 2) 0.05s, height 0.4s cubic-bezier(0.95,-0.6, 0.45, 2) 0.05s, background-color 0.2s ease-in-out 0.05s;
}

.udot_active_s, .ldot_active_s { /* indirect */
    width: 0.3rem;
    height: 0.3rem;
}

.udot_active_b, .ldot_active_b { /* direct */
    width: 1.2rem !important;
    height: 0.3rem !important;
}

/*----------------------------------------------*/


/*
+----------------------------------------------+
| :: P O R T R A I T  O R I E N T A T I O N :: | 
+----------------------------------------------+
*/

@media (orientation: portrait) {
    .ilist_icon {
        display: none !important;
    }

    #list, #icons {
        padding: 2rem 1.5rem 2rem 1.5rem;
    }

    .title {
        font-size: 1rem;
    }
    
    .title_active {
        font-size: 1.25rem;
    }

    .description {
        font-size: 0.5rem;
        font-style: italic;
    }
    
    .description_active {
        font-size: 0.55rem
    }

    .icon_active_b { /* indirect list */
        transform: scale(1);
    }
    
    .icon_active_s { /* direct list */
        transform: scale(0.8);
    }
    
    .large_icon { /* direct icon */
        transform: scale(1.1) !important;
    }

    .icon_list {
        gap: 1.5rem;
    }
}

/*----------------------------------------------*/

